# fskb

./: .gitattributes  LICENSE  README.md  index.html  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/lib/common/src/: dir.rs
src-tauri/lib/doc-to-pdf/: Cargo.toml
src-tauri/lib/doc-to-pdf/src/: lib.rs  main.rs
src-tauri/lib/embedding/: Cargo.toml
src-tauri/lib/embedding/src/: lib.rs
src-tauri/lib/engine/: Cargo.toml
src-tauri/lib/engine/src/: db.rs  lib.rs  table_db.rs
src-tauri/lib/image-to-text/: Cargo.toml
src-tauri/lib/image-to-text/src/: image_to_text.rs  lib.rs
src-tauri/lib/input/: Cargo.toml
src-tauri/lib/input/src/: csv.rs  docx.rs  lib.rs  md.rs  pdf.rs  txt.rs  url.rs  xlsx.rs
src-tauri/lib/mcp/: Cargo.toml
src-tauri/lib/mcp/src/: lib.rs  mcp_manager.rs  mcpsi.rs
src-tauri/lib/memory/: Cargo.toml  user_profile_template.yml
src-tauri/lib/memory/src/: lib.rs  profile.rs  profile_extract.rs
src-tauri/lib/model/: Cargo.toml
src-tauri/lib/model/src/: lib.rs  modelscope.rs
src-tauri/lib/ocr/: Cargo.toml
src-tauri/lib/ocr/src/: lib.rs
src-tauri/lib/summary/: Cargo.toml
src-tauri/lib/summary/src/: lib.rs  summary_extract.rs
src-tauri/lib/textgen/: Cargo.toml
src-tauri/lib/textgen/src/: lib.rs  share_card_generate.rs
src-tauri/lib/updater/: Cargo.toml
src-tauri/resources/: .version
src-tauri/resources/driver/libreoffice/: CREDITS.fodt  LICENSE.html  NOTICE  license.txt  update-settings.ini
src-tauri/resources/driver/libreoffice/program/: 4c218395-7637-4341-9431-f9a999f4098b.dmp  access2base.py  bootstrap.ini  desktophelper.txt  fundamental.ini  javavendors.xml  jvmfwk3.ini  louno.ini  mailmerge.py  msgbox.py  officehelper.py  pythonloader.py  pythonloader.uno.ini  pythonscript.py  pyuno.pyd  redirect.ini  scriptforge.py  scriptforge.pyi  services.rdb  setup.ini  soffice.com  soffice.ini  types.rdb  uno.ini  uno.py  unohelper.py  unopkg.com  updater.ini  version.ini
src-tauri/resources/driver/libreoffice/program/intl/: fbintl.conf
src-tauri/resources/driver/libreoffice/program/opencl/: cl-test.ods
src-tauri/resources/driver/libreoffice/program/opengl/: basicFragmentShader.glsl  basicVertexShader.glsl  dissolveFragmentShader.glsl  dummyVertexShader.glsl  fadeBlackFragmentShader.glsl  fadeFragmentShader.glsl  glitterFragmentShader.glsl  glitterVertexShader.glsl  honeycombFragmentShader.glsl  honeycombGeometryShader.glsl  honeycombVertexShader.glsl  linearMultiColorGradientFragmentShader.glsl  linearTwoColorGradientFragmentShader.glsl  radialMultiColorGradientFragmentShader.glsl  radialTwoColorGradientFragmentShader.glsl  rectangularMultiColorGradientFragmentShader.glsl  rectangularTwoColorGradientFragmentShader.glsl  reflectionFragmentShader.glsl  reflectionVertexShader.glsl  rippleFragmentShader.glsl  staticFragmentShader.glsl  vortexFragmentShader.glsl  vortexGeometryShader.glsl  vortexVertexShader.glsl
src-tauri/resources/driver/libreoffice/program/services/: postgresql-sdbc.rdb  pyuno.rdb  scriptproviderforbeanshell.rdb  scriptproviderforjavascript.rdb  scriptproviderforpython.rdb  services.rdb
src-tauri/resources/driver/libreoffice/program/types/: offapi.rdb  oovbaapi.rdb
src-tauri/resources/driver/libreoffice/share/basic/: dialog.xlc  script.xlc
src-tauri/resources/driver/libreoffice/share/calc/: styles.xml
src-tauri/resources/driver/libreoffice/share/classification/: example.xml  example_ca-ES.xml  example_es-ES.xml  example_fr-FR.xml  example_hu-HU.xml  example_nl-NL.xml  example_pt-BR.xml  example_sl-SI.xml  example_zh-CN.xml
src-tauri/resources/driver/libreoffice/share/filter/: oox-drawingml-adj-names  oox-drawingml-cs-presets  (+1 more)
src-tauri/resources/driver/nodejs/: corepack  corepack.cmd  install_tools.bat  nodevars.bat  npm  npm.cmd  npx  npx.cmd
src-tauri/resources/driver/ocr/models/: config_chinese.txt  config_chinese_cht.txt  config_cyrillic.txt  config_en.txt  config_japan.txt  config_korean.txt  configs.txt  dict_chinese_cht.txt  dict_cyrillic.txt  dict_en.txt  dict_japan.txt  dict_korean.txt
src-tauri/resources/model/bge-small-zh-v1_5/: config.json  tokenizer_config.json
src-tauri/resources/model/jina-reranker-v2-base-multilingual/: config.json  model.onnx  tokenizer.json  tokenizer_config.json
src-tauri/src/: lib.rs  main.rs  setup.rs  updater.rs
src-tauri/src/common/: commands.rs  id.rs  mod.rs  pool.rs  req.rs  res.rs  result.rs
src-tauri/src/config/: cli_config.rs  config.rs  license.rs  mod.rs
src-tauri/src/constant/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/mapper/: chat_message.html  knowledge_base.html  knowledge_base_import_record.html  model.html  note.html
src-tauri/src/db/migrations/: mod.rs
src-tauri/src/db/migrations/v0_1_0/: mod.rs
src-tauri/src/db/model/: chat_message.rs  knowledge_base.rs  knowledge_base_import_record.rs  mcp_server.rs  mcp_server_define.rs  mod.rs  model.rs  note.rs  system_config.rs  user_profile.rs
src-tauri/src/db/sql/: init.sql
src-tauri/src/plugins/: mod.rs  tauri_plugin_shutdown.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/chat/: chat_helper.rs  chat_model.rs  command.rs  commands.rs  mod.rs  request.rs  service.rs
src-tauri/src/server/components/: commands.rs  mod.rs  share_card.rs
src-tauri/src/server/kb/: commands.rs  mod.rs  parse.rs  request.rs  response.rs  search.rs  service.rs
src-tauri/src/server/mcp/: commands.rs  mod.rs  request.rs  response.rs  service.rs  sync.rs
src-tauri/src/server/mcp/default/: kb_mcp.rs  mod.rs
src-tauri/src/server/model/: commands.rs  mod.rs  request.rs  response.rs  service.rs
src-tauri/src/server/note/: commands.rs  mod.rs  request.rs  response.rs  service.rs
src-tauri/src/server/search/: commands.rs  kb_search.rs  local_search.rs  mod.rs  request.rs  response.rs  service.rs
src-tauri/src/server/user/: commands.rs  memory.rs  mod.rs  request.rs  response.rs  service.rs
src-tauri/src/task/: mod.rs
src-tauri/src/utils/: file_util.rs  mod.rs
(+4533 files in other folders)
