[package]
name = "fs-kb-app"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fs_kb_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
embedding = { path = "lib/embedding" }
engine = { path = "lib/engine" }
model = { path = "lib/model" }
mcp = { path = "lib/mcp" }
input = { path = "lib/input" }
doc-to-pdf = { path = "lib/doc-to-pdf" }
ocr = { path = "lib/ocr" }
common = { path = "lib/common" }
image-to-text = { path = "lib/image-to-text" }
memory = { path = "lib/memory" }
summary = { path = "lib/summary" }
updater = { path = "lib/updater" }
textgen = { path = "lib/textgen" }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.33"
reqwest = "0.12.22"
log = "0.4.27"
env_logger = "0.11.8"
tokio = { version = "1" }
chrono = "0.4.39"
anyhow = "1.0.98"
thiserror = "2.0.12"
rbatis = { version = "4.6", features = ["debug_mode"] }
rbs = { version = "4.6" }
rbdc-sqlite = { version = "^4.6" }
rbdc-pool-fast = "4.6"
idgenerator = "2.0.0"
fastdate = "0.3.36"
semver = "1"
strum = "0.27.1"
strum_macros = "0.27.1"
clap = { version = "4.5", features = ["derive"] }
ansi_term = "0.12.1"
derive_builder = "0.20.2"
openai_dive = { workspace = true }
nanoid = "0.4.0"
futures-util = "0.3.31"
tokio-cron-scheduler = { version = "0.14.0", features = ["english"] }
dashmap = "7.0.0-rc2"
tauri-plugin-fs = "2"
base64 = "0.22.1"
uuid = { version = "1.17.0", features = ["v4"] }
sysinfo = "0.36.1"
backtrace = "0.3.75"
tauri-plugin-process = "2"
fs_extra = "1.3.0"
[workspace]
members = ["lib/embedding", "lib/engine", "lib/model", "lib/mcp", "lib/doc-to-pdf", "lib/input", "lib/ocr", "lib/image-to-text", "lib/common", "lib/memory", "lib/summary", "lib/updater", "lib/textgen"]

[workspace.dependencies]
chrono = "0.4.41"
anyhow = "1.0.97"
thiserror = "2.0"
log = "0.4.27"
env_logger = "0.11.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1" }
reqwest = "0.12.15"
openai_dive = { version = "1.0.1", features = ["stream"], git = "ssh://git@github.com/xgpxg/openai-client.git" }

