[package]
name = "doc-to-pdf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true, features = [] }
env_logger = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }
fs_extra = "1.3.0"
common = { path = "../common" }
[[bin]]
name = "doc-to-pdf"
path = "src/main.rs"
