[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../lib/common" }
lancedb = "0.21.1"
arrow-array = "55.2.0"
chrono = "0.4.39"
thiserror = "2.0.12"
dashmap = "7.0.0-rc2"
futures-util = "0.3.31"
anyhow = "1.0.98"
derive_builder = "0.20"
uuid = { version = "1.16.0", features = ["v4"] }
itertools = "0.14.0"
sqlx = { version = "0.8.5", default-features = false, features = ["sqlite", "runtime-tokio"] }
serde = { workspace = true }
serde_json = { workspace = true }