[package]
name = "image-to-text"
version = "0.1.0"
edition = "2024"

[dependencies]
openai_dive = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.22.1"

