[package]
name = "input"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
docx-rs = "0.4"
pdfium-render = { version = "0.8", features = ["pdfium_use_win32"] }
image = "0.25"
encoding_rs = "0.8.35"
headless_chrome = { version = "1.0", features = [] }
calamine = "0.29.0"
csv = "1.3.1"
uuid = { version = "1.16.0", features = ["v4"] }
log = { workspace = true, features = [] }
env_logger = { workspace = true }