[package]
name = "mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "1.44.1"
anyhow = "1.0.97"
thiserror = "2.0"
dashmap = { version = "6.1.0" }
rmcp = { version = "0.3.0", features = ["client", "transport-sse-server", "reqwest", "transport-sse-client", "transport-child-process"] }
reqwest = { version = "0.12.15", features = ["json"] }
log = { workspace = true }
env_logger = { workspace = true }
