[package]
name = "model"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
log = { workspace = true }
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { workspace = true,features = ["full"] }
serde = { workspace = true }
bytes = "1.10.1"
rand = "0.9.1"
futures-util = "0.3.31"
