[package]
name = "textgen"
version = "0.1.0"
edition = "2024"

[dependencies]
openai_dive = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }