[package]
name = "updater"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../common" }
anyhow = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
futures-util = "0.3.31"
serde = { workspace = true }
serde_json = { workspace = true }